# gizmo_imf

./: Config.sh  Config.sh~  GIZMO  GIZMO_config.h  Makefile  Makefile.systype  README.md  Template_Config.sh  accel.c  allvars.c  allvars.h  begrun.c  compile_time_info.c  config-makefile  domain.c  driftfac.c  global.c  init.c  io.c  kicks.c  main.c  merge_split.c  ngb.c  predict.c  proto.h  pyproject.toml  read_ic.c  run.c  test.txt  timestep.c
cooling/: cooling.c  cooling.cc  cooling.h  grackle.cc  jaco.c  simple_chemistry.c  simple_chemistry.cc
core/: accel.cc  begrun.cc  driftfac.cc  init.cc  kicks.cc  main.cc  predict.cc  proto.h  run.cc  timestep.cc
declarations/: allvars.cc  allvars.h  cell_data.h  cell_soa.h  constants.h  global.cc  macros.h  particle_data.h  particle_soa.h  precompiler_logic.h  typedefs.h
domain/: domain.cc  domain.h
eos/: eos.c  eos.cc  eos.h  eos_interface.cc  hydrogen_molecule.c  hydrogen_molecule.cc
file_io/: io.cc  prepare-config.perl  read_ic.cc  restart.cc
galaxy_sf/: dm_dispersion_hsml.cc  dm_dispersion_rkern.cc  mechanical_fb.c  mechanical_fb.cc  radfb_local.c  radfb_local.cc  sfr_eff.c  sfr_eff.cc  stellar_evolution.c  stellar_evolution.cc  thermal_fb.cc
gravity/: ags_hsml.c  ags_hsml.cc  ags_rkern.cc  analytic_gravity.h  binary.cc  cosmology.cc  forcetree.c  forcetree.cc  forcetree.h  forcetree_update.c  forcetree_update.cc  gravtree.c  gravtree.cc  gravtree_tile.h  longrange.c  longrange.cc  pm_nonperiodic.cc  pm_periodic.c  pm_periodic.cc  potential.c  potential.cc
hydro/: compute_finitevol_faces.h  conduction.h  (+15 more)
(+244 files in other folders)
