[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gizmo"
version = "0.1"
description = "Tests and helper scripts for the gizmo mesh-free multi-physics code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pytest","h5py","matplotlib","astropy","numpy", "scipy"]

license = "MIT"

[project.urls]
Homepage = "https://github.com/phopkins/gizmo"
Issues = "https://github.com/phopkins/gizmo/issues"

[tool.setuptools.packages.find]
where = ["python_src"]